should fix nav issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,9 @@ button {
     padding-right:1em;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .logo {
+    width: 60vh;
+  }
+}
